################################################################################
#                         nxAutoNuke-ioA - Change Log                          #
################################################################################

nxAutoNuke-ioA v2.3.1 (not released):
  CHG: The init.itcl script is no longer used for loading library files.

nxAutoNuke-ioA v2.3.0 (Oct 29, 2005):
  NEW: Example directory tag patterns in the readme (section 4).
  NEW: Improved error logging when incorrect settings are detected.
  NEW: Minimum and maximum bitrate for MP3 releases.
  NEW: Minimum and maximum size enforcements for releases.
  CHG: Minor clean-ups to the default configuration file.
  CHG: Moved configuration to the nxAutoNuke-ioA directory.
  CHG: New announce types (ANUKESIZE), be sure to update your sitebot.
  CHG: Removed ioBanana.exe KICKNUKE functions (not present in ioBanana v2.0 rel-1).
  CHG: Verify the parsed IMDB and MP3 values before comparing them.

nxAutoNuke-ioA v2.2.0 (Oct 12, 2005):
  NEW: Moved to the modified BSD license.
  NEW: Included a custom init.itcl without the nxTools libraries.
  FIX: The script failed if a section had the wrong number of options.

nxAutoNuke-ioA v2.1.1 (Aug 13, 2005):
  FIX: The virtual path passed to ioBanana used the wrong path delimiters.

nxAutoNuke-ioA v2.1.0 (Aug 11, 2005):
  NEW: Added 'kicknuke' support for ioBanana.
  CHG: The ioA version is distributed separately now.

nxAutoNuke-ioA v2.0.2 (Apr 03, 2005):
  FIX: An incorrect cookie was used for the ANUKEKEYWORD bot skin.
  FIX: Nuke times were shown in seconds instead of minutes for nxTools/dZSbot announces.

nxAutoNuke-ioA v2.0.1 (Mar 28, 2005):
  FIX: Fixed a few typos.
  FIX: Forgot to remove some debug code (again).

nxAutoNuke-ioA v2.0.0 (Mar 27, 2005):
  NEW: Installation instructions for nxTools and dZSbot.
  CHG: Nearly configuration options have changed.
  CHG: Redesigned nxAutoNuke, much more efficient now.