@@ -47,9 +47,15 @@ set anuke(ImdbOrder)    {genre year rating}
 set anuke(MP3Match)     {^\[.*\] - \( .* - COMPLETE - (.+) (\d+) \) - \[.*\]$}
 set anuke(MP3Order)     {genre year}
 #
-# - The approve tag format, to exempt approved releases.
+# - Approve tag format, to exempt approved releases from auto-nuking.
+# - Shell style pattern matching (*, ?, []).
 #
 set anuke(ApproveTag)   {[Approved By *@*]}
+#
+# - Incomplete tag format, to detect incomplete releases.
+# - Shell style pattern matching (*, ?, []).
+#
+set anuke(IncTag)       {\[*\] - *% Complete - \[*\]}
 
 #### AutoNuke Reasons ######################################
 #
