@@ -2,6 +2,9 @@
 #                           nxAutoNuke - Change Log                            #
 ################################################################################
 
+nxAutoNuke v2.3.1 (not yet released):
+  NEW: Check for incomplete directory tags.
+
 nxAutoNuke v2.3.0 (Oct 29, 2005):
   NEW: Example directory tag patterns in the readme (section 3).
   NEW: Improved error logging when incorrect settings are detected.
